test/objects/Fitbit_User__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <fields>
        <fullName>Fitbit_User_Id__c</fullName>
        <label>Fitbit User Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>isAccess__c</fullName>
        <defaultValue>false</defaultValue>
        <label>isAccess</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>secret__c</fullName>
        <label>secret</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>token__c</fullName>
        <label>token</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Fitbit User</label>
</CustomObject>